added global white container styles

--- a/src/styles/css/pages/user-page.css
+++ b/src/styles/css/pages/user-page.css
@@ -22,5 +22,4 @@
 .user-page .to-do-list article {
   width: 90%;
   margin: 0 auto 1rem;
-  padding: 1rem;
-  border-bottom: 1px black solid; }
+  padding: 1rem; }
