--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -11,10 +11,6 @@ button {
   background-color: blueviolet; }
 
 form {
-  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
-  border-radius: 20px;
-  margin: 1rem;
-  padding: 1rem;
   display: flex;
   flex-direction: column; }
   form input, form textarea {
@@ -23,3 +19,9 @@ form {
     border-radius: 20px;
     padding: 10px 12px;
     margin-bottom: 1rem; }
+
+.white-container {
+  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
+  border-radius: 20px;
+  padding: 1rem;
+  margin: 1rem; }
