--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -13,10 +13,6 @@ button{
     background-color: blueviolet;
 }
 form{
-    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
-    border-radius: 20px;
-    margin: 1rem;
-    padding: 1rem;
     display: flex;
     flex-direction: column;
     input, textarea{
@@ -26,4 +22,11 @@ form{
         padding: 10px 12px;
         margin-bottom: 1rem;
     }
+}
+
+.white-container{
+    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
+    border-radius: 20px;
+    padding: 1rem;
+    margin: 1rem;
 }
