able to ddelete  users from admin and user panel, able to update user info from admin and user panel, able to allow users to login, added restrictions to login/register and login as admin

--- a/src/styles/scss/navigation-menu.scss
+++ b/src/styles/scss/navigation-menu.scss
@@ -3,7 +3,10 @@
     display: flex;
     justify-content: space-around;
     background-color: blueviolet;
+    align-items: center;
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
     .web-app-title{
         font-size: 1.5rem;
+        font-weight: 900;
     }
 }
