--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -1,19 +1,34 @@
 body {
-  margin: 0; }
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif; }
+
+a, button {
+  cursor: pointer; }
+
+label {
+  font-size: 1.2rem; }
 
 button {
+  margin: 0rem 0.5rem 0rem;
   border: none;
   border-radius: 25px;
-  padding: 0.5rem 1rem; }
+  padding: 0.5rem 1rem;
+  font-size: 1rem;
+  font-weight: 700;
+  color: rgba(0, 0, 0, 0.493); }
 
 .submit-button {
+  margin-top: 1rem;
   color: white;
   background-color: blueviolet; }
 
-form {
+.form {
   display: flex;
-  flex-direction: column; }
-  form input, form textarea {
+  flex-direction: column;
+  align-items: flex-start; }
+  .form label {
+    margin-bottom: 1rem; }
+  .form input, .form textarea {
     font-size: 1rem;
     border: rgba(0, 0, 0, 0.459) 1px solid;
     border-radius: 20px;
@@ -21,7 +36,7 @@ form {
     margin-bottom: 1rem; }
 
 .white-container {
-  box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
   border-radius: 20px;
   padding: 1rem;
   margin: 1rem; }
