--- a/src/styles/css/navigation-menu.css
+++ b/src/styles/css/navigation-menu.css
@@ -2,6 +2,9 @@
   padding: 1rem;
   display: flex;
   justify-content: space-around;
-  background-color: blueviolet; }
+  background-color: blueviolet;
+  align-items: center;
+  box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15); }
   .navigation-menu .web-app-title {
-    font-size: 1.5rem; }
+    font-size: 1.5rem;
+    font-weight: 900; }
