--- a/src/styles/css/pages/admin-page.css
+++ b/src/styles/css/pages/admin-page.css
@@ -1,14 +1,11 @@
 .admin-page section {
   width: 80%;
-  margin: 1rem auto 2rem; }
-  .admin-page section a {
-    text-decoration: none; }
-    .admin-page section a article {
-      display: flex;
-      justify-content: space-around;
-      align-items: center; }
-      .admin-page section a article img {
-        border: black 1px solid;
-        border-radius: 20px;
-        width: 100px;
-        height: 100px; }
+  margin: 1rem auto 2rem;
+  text-decoration: none; }
+  .admin-page section article {
+    display: flex;
+    justify-content: space-around;
+    align-items: center; }
+    .admin-page section article img {
+      width: 100px;
+      height: 100px; }
