--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -1,20 +1,38 @@
 body{
     margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+}
+
+a, button{
+    cursor: pointer;
+}
+
+label{
+    font-size: 1.2rem;
 }
 
 button{
+    margin: 0rem 0.5rem 0rem;
     border: none;
     border-radius: 25px;
     padding: 0.5rem 1rem;   
+    font-size: 1rem;
+    font-weight: 700;
+    color: rgba(0, 0, 0, 0.493);
 }
 
 .submit-button{
+    margin-top: 1rem;
     color: white;
     background-color: blueviolet;
 }
-form{
+.form{
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    label{
+        margin-bottom: 1rem;
+    }
     input, textarea{
         font-size: 1rem;
         border:rgba(0, 0, 0, 0.459) 1px solid;
@@ -25,7 +43,7 @@ form{
 }
 
 .white-container{
-    box-shadow: 4px 4px 20px rgba(0, 0, 0, 0.15);
+    box-shadow: 2px 2px 15px rgba(0, 0, 0, 0.15);
     border-radius: 20px;
     padding: 1rem;
     margin: 1rem;
