--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -24,12 +24,12 @@ button{
 .submit-button{
     margin-top: 1rem;
     color: white;
-    background-color: blueviolet;
+    border-radius: 50px;
+    background: linear-gradient(145deg, #c070dc, #a15fb9);
 }
 .form{
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
     label{
         margin-bottom: 1rem;
     }
