--- a/src/styles/css/pages/user-page.css
+++ b/src/styles/css/pages/user-page.css
@@ -4,21 +4,27 @@
   justify-content: center;
   align-items: center; }
   .user-page .user-details-container img {
-    margin-top: 2rem;
+    margin-top: 1rem;
     border-radius: 25px;
     width: 100px;
     height: 100px; }
   .user-page .user-details-container .user-name {
     font-size: 2rem;
     margin: 1rem 0 0.5rem; }
-  .user-page .user-details-container .user-id {
-    margin-bottom: 2rem; }
 
-.user-page .to-do-section form {
-  margin: 1rem auto;
-  width: 30%; }
-
-.user-page .to-do-list article {
-  width: 90%;
-  margin: 0 auto 1rem;
-  padding: 1rem; }
+.user-page .to-do-section {
+  display: flex;
+  flex-direction: column;
+  align-items: center; }
+  .user-page .to-do-section form {
+    width: 30%; }
+    .user-page .to-do-section form button {
+      margin-top: 0.5rem; }
+  .user-page .to-do-section .to-do-list article {
+    margin: 0 auto 1rem;
+    padding: 1rem;
+    display: flex;
+    justify-content: space-between;
+    align-items: center; }
+  .user-page .to-do-section .to-do-list span {
+    margin: 1rem; }
