--- a/src/styles/css/pages/login-register-page.css
+++ b/src/styles/css/pages/login-register-page.css
@@ -4,3 +4,7 @@
   display: flex;
   align-items: center;
   justify-content: center; }
+
+@media (max-width: 600px) {
+  .login-register-page .forms-container {
+    flex-direction: column; } }
