--- a/src/styles/scss/pages/user-page.scss
+++ b/src/styles/scss/pages/user-page.scss
@@ -1,43 +1,45 @@
 .user-page{
     .user-details-container{
+        margin-top: 1rem;
         display: flex;
         flex-direction: column;
-        justify-content: center;
         align-items: center;
         img{
-            margin-top: 1rem;
-            border-radius: 25px;
-            width: 100px;
-            height: 100px;
-        }
-        .user-name{
-            font-size: 2rem;
-            margin: 1rem 0 0.5rem;
+            width: 200px;
+            height: 200px;
         }
     }
-    .to-do-section{
-    display: flex;
-     flex-direction: column;
-     align-items: center;
-        form{
-            width: 30%;
-            button{
-                margin-top: 0.5rem;
-            }
-        }
-        .to-do-list{
+    .create-task-section{
+        .task-list{
             article{
-                margin:0 auto 1rem;
-                padding: 1rem;
-                display: flex;
-                justify-content: space-between;
-                align-items: center;
-            }
-            span{
-                margin:1rem;
+                .task-title{
+                    font-size: 1.5rem;
+                }
+                p{
+                    font-size: 1.2rem;
+                }
+                span{
+                    font-size: 1rem;
+                }
             }
         }
+}
+}
+
+@media (min-width: 750px) {
+    .user-page{
+        .user-details-container{
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            img{
+                width: 100px;
+                height: 100px;
+            }
+        }
+        .create-task-section{
+            width: 40%;
+            margin: 0 auto;
     }
-    
-        
-    }
+}
+}
