--- a/src/styles/css/pages/admin-console-page.css
+++ b/src/styles/css/pages/admin-console-page.css
@@ -1,10 +1,9 @@
-.admin-console-page {
-  display: flex; }
-  .admin-console-page .user-details {
-    margin-top: 1rem;
-    width: 20%;
-    display: flex;
-    flex-direction: column;
-    align-items: center; }
-  .admin-console-page .user-todo-list {
-    width: 80%; }
+.admin-user-info-page .user-details {
+  display: flex;
+  flex-direction: column;
+  justify-content: center; }
+
+@media (min-width: 990px) {
+  .admin-user-info-page {
+    display: grid;
+    grid-template-columns: 30% 70%; } }
