--- a/src/styles/css/pages/admin-page.css
+++ b/src/styles/css/pages/admin-page.css
@@ -1,11 +1,30 @@
-.admin-page section {
-  width: 80%;
-  margin: 1rem auto 2rem;
-  text-decoration: none; }
-  .admin-page section article {
+.admin-page section .user-info-card > * {
+  margin: 0 10px; }
+
+.admin-page section .user-info-card {
+  display: flex;
+  align-items: center;
+  justify-content: space-between; }
+  .admin-page section .user-info-card img {
+    width: 100px;
+    height: 100px; }
+  .admin-page section .user-info-card form {
+    text-align: center; }
+  .admin-page section .user-info-card div {
+    display: flex; }
+    .admin-page section .user-info-card div button {
+      margin: 0 10px; }
+
+@media (max-width: 830px) {
+  .admin-page section .user-info-card {
     display: flex;
-    justify-content: space-around;
+    flex-direction: column;
     align-items: center; }
-    .admin-page section article img {
-      width: 100px;
-      height: 100px; }
+    .admin-page section .user-info-card img {
+      width: 200px;
+      height: 200px; }
+    .admin-page section .user-info-card h1 {
+      font-size: 1.3rem;
+      margin: 1rem 0rem; }
+    .admin-page section .user-info-card form {
+      margin: 1rem 0rem; } }
