--- a/src/styles/scss/pages/admin-console-page.scss
+++ b/src/styles/scss/pages/admin-console-page.scss
@@ -1,13 +1,14 @@
-.admin-console-page{
-    display: flex;
+.admin-user-info-page{
     .user-details{
-        margin-top: 1rem;
-        width: 20%;
         display: flex;
         flex-direction: column;
-        align-items: center;
+        justify-content: center;
     }
-    .user-todo-list{
-        width: 80%;
+}
+
+@media (min-width: 990px) {
+    .admin-user-info-page{
+        display: grid;
+        grid-template-columns: 30% 70%;
     }
 }
