--- a/src/styles/scss/pages/user-page.scss
+++ b/src/styles/scss/pages/user-page.scss
@@ -4,20 +4,16 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        img{
-            width: 200px;
-            height: 200px;
+        .user-name{
+            margin: 1rem 0 0;
+        }
+        .user-email{
+            margin: 0 0 1rem;
         }
     }
     .create-task-section{
         .task-list{
             article{
-                .task-title{
-                    font-size: 1.5rem;
-                }
-                p{
-                    font-size: 1.2rem;
-                }
                 span{
                     font-size: 1rem;
                 }
@@ -32,10 +28,6 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            img{
-                width: 100px;
-                height: 100px;
-            }
         }
         .create-task-section{
             width: 40%;
