--- a/src/styles/css/index.css
+++ b/src/styles/css/index.css
@@ -5,11 +5,18 @@ body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif; }
 
+.task-title {
+  font-size: 1.5rem; }
+
+.task-description {
+  font-size: 1rem;
+  opacity: 0.4; }
+
 a, button {
   cursor: pointer; }
 
 button {
-  margin: 0rem 0.5rem 0rem;
+  margin: 0.5rem;
   border: none;
   border-radius: 5px;
   padding: 0.5rem 1rem;
@@ -21,20 +28,25 @@ button:hover {
   opacity: 0.5; }
 
 .submit-button {
-  margin: 0.5rem;
   color: white;
   background: linear-gradient(145deg, #c070dc, #a15fb9); }
 
 .disabled-button {
-  margin: 0.5rem;
   color: white;
   background-color: #b8b8b8; }
 
+.delete-button {
+  color: white;
+  background-color: crimson; }
+
 .disabled-button:hover {
-  opacity: 1; }
+  opacity: 1;
+  cursor: default; }
 
 .warning-message {
-  text-align: center; }
+  font-size: 2rem;
+  text-align: center;
+  opacity: 0.5; }
 
 .form {
   display: flex;
