--- a/src/styles/css/pages/user-page.css
+++ b/src/styles/css/pages/user-page.css
@@ -3,15 +3,10 @@
   display: flex;
   flex-direction: column;
   align-items: center; }
-  .user-page .user-details-container img {
-    width: 200px;
-    height: 200px; }
-
-.user-page .create-task-section .task-list article .task-title {
-  font-size: 1.5rem; }
-
-.user-page .create-task-section .task-list article p {
-  font-size: 1.2rem; }
+  .user-page .user-details-container .user-name {
+    margin: 1rem 0 0; }
+  .user-page .user-details-container .user-email {
+    margin: 0 0 1rem; }
 
 .user-page .create-task-section .task-list article span {
   font-size: 1rem; }
@@ -21,9 +16,6 @@
     display: flex;
     flex-direction: column;
     align-items: center; }
-    .user-page .user-details-container img {
-      width: 100px;
-      height: 100px; }
   .user-page .create-task-section {
     width: 40%;
     margin: 0 auto; } }
