--- a/src/styles/scss/index.scss
+++ b/src/styles/scss/index.scss
@@ -7,12 +7,21 @@ body{
     font-family: Arial, Helvetica, sans-serif;
 }
 
+.task-title{
+    font-size: 1.5rem;
+}
+
+.task-description{
+    font-size: 1rem;
+    opacity: 0.4;
+}
+
 a, button{
     cursor: pointer;
 }
 
 button{
-    margin: 0rem 0.5rem 0rem;
+    margin: 0.5rem;
     border: none;
     border-radius: 5px;
     padding: 0.5rem 1rem;   
@@ -26,23 +35,29 @@ button:hover{
 }
 
 .submit-button{
-    margin: 0.5rem;
     color: white;
     background: linear-gradient(145deg, #c070dc, #a15fb9);
 }
 
 .disabled-button{
-    margin: 0.5rem;
     color: white;
     background-color: rgb(184, 184, 184);
 }
 
+.delete-button{
+    color: white;
+    background-color:crimson
+}
+
 .disabled-button:hover{
     opacity: 1;
+    cursor: default;
 }
 
 .warning-message{
+    font-size: 2rem;
     text-align: center;
+    opacity: 0.5;
 }
 
 .form{
